objects/ASI_CN_NPL_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CN_NPL_Accounting_Type__c</fullName>
        <label>Accounting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Brand_RP1__c</fullName>
        <label>Brand (RP1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Cap_Group__c</fullName>
        <label>Cap Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Changed_Accounting_Type__c</fullName>
        <label>Accounting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Changed_Brand_RP1__c</fullName>
        <label>Brand (RP1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Changed_Cap_Group__c</fullName>
        <label>Cap Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Changed_Hyperion_Brand_RP12__c</fullName>
        <label>Hyperion Brand (RP12)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Changed_Hyperion_Product_RP11__c</fullName>
        <label>Hyperion Product (RP11)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Changed_RP9__c</fullName>
        <label>RP9</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Changed_Sub_Brand_RP_6__c</fullName>
        <label>Sub Brand (RP 6)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Historical_Data_Revise_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical Data Revise Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Hyperion_Brand_RP12__c</fullName>
        <label>Hyperion Brand (RP12)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Hyperion_Product_RP11__c</fullName>
        <label>Hyperion Product (RP11)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Code__c</fullName>
        <label>Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Description_CH__c</fullName>
        <label>Item Description (CH)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Description_GE__c</fullName>
        <label>Item Description (GE)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Packing_BT_per_case__c</fullName>
        <label>Packing - BT per Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Packing_CL_per_bottle__c</fullName>
        <label>Packing - CL per Bottle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_RP9__c</fullName>
        <label>RP9</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Sub_Brand_RP_6__c</fullName>
        <label>Sub Brand (RP 6)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Item Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CN_NPL_Item_Description_CH__c</columns>
        <columns>ASI_CN_NPL_Item_Description_GE__c</columns>
        <columns>ASI_CN_NPL_Status__c</columns>
        <columns>ASI_CN_NPL_Packing_BT_per_case__c</columns>
        <columns>ASI_CN_NPL_Packing_CL_per_bottle__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Change Request Ref. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Change Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_CN_NPL_Accounting_Type_Change</fullName>
        <active>true</active>
        <label>RP/Accounting Type Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CN_NPL_Cap_Group_Change</fullName>
        <active>true</active>
        <label>Cap Group Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CN_NPL_Change_Request_BA</fullName>
        <active>true</active>
        <label>ASI CN NPL Change Request - BA</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CN_NPL_Change_Request_IT_SP</fullName>
        <active>true</active>
        <label>ASI CN NPL Change Request - IT SP</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>